--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,10 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <div style="display: flex; justify-content: center; align-items: center;">
+  <h1>Loading</h1>
+  </div>
+  
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
