--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>player_watchtower</title>
   <link rel="manifest" href="manifest.json">
+  <link href="style.css" rel="stylesheet" type="text/css" />
 
   <script>
     // The value below is injected by flutter build, do not touch.
@@ -41,8 +42,11 @@
 
 </head>
 <body>
-  <div style="display: flex; justify-content: center; align-items: center;">
-  <h1>Loading</h1>
+  <div class="loading-body">
+    <h1>Loading</h1>
+    <h1 class="p1">.</h1>
+    <h1 class="p2">.</h1>
+    <h1 class="p3">.</h1>
   </div>
   
   <script>
